--- a/pedido-movel/src/pages/detalheproduto/detalheproduto.html
+++ b/pedido-movel/src/pages/detalheproduto/detalheproduto.html
@@ -1,6 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Detalhe produto</ion-title>
+    <ion-buttons end>
+      <button (click)="irParaCarrinho()" ion-button>
+        <span class="buttons-text">
+          Itens do pedido
+        </span>
+        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
@@ -36,8 +44,8 @@
             </div>
 
             <div class="row" style="margin-bottom: 40px;">
-             <div class="primeira-coluna-detail-produto">
-                <span class="label-column-list">Estoque</span> 
+              <div class="primeira-coluna-detail-produto">
+                <span class="label-column-list">Estoque</span>
                 <span class="item-column-list-produtos">{{produtoSelecionado.quantidade}}</span>
               </div>
               <div style="display: inline-block; ">
@@ -48,7 +56,7 @@
 
             <div class="row">
               <div style="display: inline-block; text-align: center;">
-                <button  (click)="adicionarProduto(produtoSelecionado)" ion-button round small style="float: right;">
+                <button (click)="adicionarProduto(produtoSelecionado)" ion-button round small style="float: right;">
                   <span class="fa fa-fw fa-shopping-basket"></span>
                   <span>Adicionar Item</span>
                 </button>
