Criando componente de seleção
Criando componente de seleção da quantidade do produto.

--- a/pedido-movel/src/pages/detalheproduto/detalheproduto.html
+++ b/pedido-movel/src/pages/detalheproduto/detalheproduto.html
@@ -50,7 +50,7 @@
               </div>
               <div style="display: inline-block; ">
                 <span class="label-column-list">Qtde</span>
-                <span class="item-column-list-produtos">{{produtoSelecionado.quantidade}}</span>
+                <select-qtd [(quantidade)]="produtoSelecionado.quantidadeSelecionada"></select-qtd>
               </div>
             </div>
 
