--- a/pedido-movel/src/pages/cliente/cliente.html
+++ b/pedido-movel/src/pages/cliente/cliente.html
@@ -2,15 +2,7 @@
   <ion-navbar>
     <ion-title class="font-title">Cliente</ion-title>
     <ion-buttons end>
-      <button (click)="irParaProdutos()" ion-button>
-        <span class="fa fa-fw fa-search buttons-header"></span>
-      </button>
-      <button (click)="irParaCarrinho()" ion-button>
-        <span class="buttons-text">
-          Itens do pedido
-        </span>
-        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
-      </button>
+      <button-pedido></button-pedido>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
