--- a/pedido-movel/src/index.html
+++ b/pedido-movel/src/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link type="text/css" href="assets/css/css/font-awesome.min.css" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
+  
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- cordova.js required for cordova apps -->
@@ -34,9 +35,9 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
+  <script src="assets/js/web-animations.min.js"></script>
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
-
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
