--- a/pedido-movel/src/pages/consultacliente/consultacliente.html
+++ b/pedido-movel/src/pages/consultacliente/consultacliente.html
@@ -2,12 +2,7 @@
     <ion-navbar>
         <ion-title>Todos os clientes</ion-title>
         <ion-buttons end>
-            <button (click)="irParaCarrinho()" ion-button>
-        <span class="buttons-text">
-          Itens do pedido
-        </span>
-        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
-      </button>
+            <button-pedido></button-pedido>
         </ion-buttons>
     </ion-navbar>
 </ion-header>
