--- a/pedido-movel/src/pages/detalheproduto/detalheproduto.html
+++ b/pedido-movel/src/pages/detalheproduto/detalheproduto.html
@@ -1,14 +1,9 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Detalhe produto</ion-title>
-    <ion-buttons end>
-      <button (click)="irParaCarrinho()" ion-button>
-        <span class="buttons-text">
-          Itens do pedido
-        </span>
-        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
-      </button>
-    </ion-buttons>
+      <ion-buttons end>
+        <button-pedido></button-pedido>
+      </ion-buttons>
   </ion-navbar>
 </ion-header>
 
