--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -1,16 +1,8 @@
 <ion-header>
   <ion-navbar>
-    <div class="logo-default"></div>
+    <div style="display: inline-block !important;" class="logo-default"></div>
     <ion-buttons end>
-      <button (click)="irParaProdutos()" mergin ion-button>
-        <span class="fa fa-fw fa-search buttons-header"></span>
-      </button>
-      <button (click)="irParaCarrinho()" ion-button>
-        <span class="buttons-text">
-          Itens do pedido
-        </span>
-        <span class="fa fa-fw fa-shopping-basket buttons-header"></span>
-      </button>
+      <button-pedido></button-pedido>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
@@ -25,12 +17,12 @@
     <ion-card-content>
       <div class="barra-divisoria"></div>
       <ion-slides pager>
-        <ion-slide >
+        <ion-slide>
           <div class="card-campanha-content">
           </div>
         </ion-slide>
         <ion-slide>
-           <div class="card-campanha-content-2">
+          <div class="card-campanha-content-2">
           </div>
         </ion-slide>
       </ion-slides>
