--- a/pedido-movel/src/pages/consultacliente/consultacliente.html
+++ b/pedido-movel/src/pages/consultacliente/consultacliente.html
@@ -18,20 +18,20 @@
             <div class="barra-divisoria"></div>
 
             <ion-grid>
-                <ion-row row *ngFor="let cliente of clientes" class="card-item-produto-edges">
-                    <ion-col col-6 align-self-center>
+                <ion-row row *ngFor="let cliente of clientes" class="card-item-produto-edges" >
+                    <ion-col col-6 align-self-center (click)="selecionar(cliente)">
                         <span class="label-column-list">Nome do cliente</span><br>
                         <span class="produto-column-list-produtos">{{cliente.nome}} {{cliente.sobrenome}}</span>
                     </ion-col>
-                    <ion-col col-2 align-self-center>
+                    <ion-col col-2 align-self-center (click)="selecionar(cliente)">
                         <span class="label-column-list">CPF</span><br>
                         <span class="item-column-list-clientes">{{cliente.cpf}}</span>
                     </ion-col>
-                    <ion-col align-self-center>
+                    <ion-col align-self-center (click)="selecionar(cliente)">
                         <span class="label-column-list">Telefone</span><br>
                         <span class="item-column-list-clientes">{{cliente.telefone}}</span>
                     </ion-col>
-                    <ion-col col-auto align-self-center>
+                    <ion-col col-auto align-self-center (click)="selecionar(cliente)">
                         <button (click)="exibirDetalhes(cliente)" class="button-detail">Detalhes</button>
                     </ion-col>
                 </ion-row>
