stilo do botao de fechamento da mensagem de finalização do pedido

--- a/pedido-movel/src/pages/finalizarpedido/finalizarpedido.html
+++ b/pedido-movel/src/pages/finalizarpedido/finalizarpedido.html
@@ -8,10 +8,8 @@
         </div>
     </ion-card-header>
     <ion-card-content>
-        <div style="display: inline-block; max-height: 40px;">
-            <button style="max-height: 40px;" (click)="ok()" clear ion-button>
-                    FECHAR
-            </button>
+        <div style="display: inline-block; max-height: 40px; margin-top: 15px;">
+            <button ion-button color="bostonblue" class="botao-primario" (click)="ok()">Fechar</button>
         </div>
     </ion-card-content>
 </ion-card>
