margem no card de produtos

--- a/pedido-movel/src/pages/grupos/grupos.html
+++ b/pedido-movel/src/pages/grupos/grupos.html
@@ -30,7 +30,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-card>
+  <ion-card class="card-default">
     <ion-card-header>
       CATEGORIAS
     </ion-card-header>
